--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,9 @@
     <input id="myInput" type="text">
     <button id="myButton"> Click me! </button>
     <script src="./app.js"></script>
+    <h3>Lista de usuarios</h3>
+    <ol id="usersList">
+        
+    </ol>
 </body>
 </html>
