add user to list

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1 id="title">Hola mundo</h1>
     <input id="myInput" type="text">
-    <button id="myButton"> Click me! </button>
-    <script src="./app.js"></script>
+    <button id="myButton"> Agregar usuario </button>
     <h3>Lista de usuarios</h3>
-    <ol id="usersList">
-        
+    <ol class="userList">
+       
     </ol>
+    <script src="./app.js"></script>
 </body>
 </html>
