--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="title">Hola mundo</h1>
-    <input id="myInput" type="text">
+    <h1 id="title">Registrarse</h1>
+    <input id="user" type="text">
+    <br>
+    <input id="password" type="text">
+    <br>
     <button id="myButton"> Agregar usuario </button>
-    <h3>Lista de usuarios</h3>
-    <ol class="userList">
-       
-    </ol>
+    <br>
+
+    <h1>Iniciar sesion</h1>
+    <input id="user2" type="text">
+    <br>
+    <input id="password2" type="text">
+    <br>
+    <button id="myButton2"> Inciar sesion </button>
+    <br>
+    <span id="message"></span>
+  
     <script src="./app.js"></script>
 </body>
 </html>
